error handling in backend

--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,19 +1,22 @@
-<nav class="navbar navbar-expand-md bg-body-tertiary border-bottom sticky-top">
+<nav class="navbar navbar-expand-md navbar-light bg-body-tertiary border-bottom sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"><i class="fa-solid fa-compass"></i></a>
+    <a class="navbar-brand"  href="/"><img src="/logo.png" alt="Next_destination Logo" class="img-fluid d-inline-block align-text-top" style="max-height: 40px;"></a>
     <button
       class="navbar-toggler"
       type="button"
       data-bs-toggle="collapse"
       data-bs-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="collapse navbar-collapse bg-body-tertiary p-2" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link" href="/">Home</a>
         <a class="nav-link" href="/listings">All Listings</a>
-        <a class="nav-link" href="listings/new">Add new Listings</a>
+        <a class="nav-link" href="/listings/new">Add new Listings</a>
       </div>
     </div>
   </div>
