--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -2,34 +2,52 @@
 <div class="row mt-3">
         <div class="col-8 offset-2">
             <h3>Edit Listing</h3>
-    <form action="/listings/<%= listing._id %>?_method=PUT" method="post">
+    <form action="/listings/<%= listing._id %>?_method=PUT" method="post" class="needs-validation" novalidate>
         <div class="mb-3">
         <label for=title" class="form-label">Title</label>
-        <input type="text" name="listing[title]" class="form-control" value="<%= listing.title %>">
+        <input type="text" name="listing[title]" class="form-control" value="<%= listing.title %>" required>
+        <div class="invalid-feedback">
+            Please enter a title
+        </div>
         </div>
         <div class="mb-3">
             <label for=description" class="form-label">Description</label>
-            <textarea name="listing[description]" class="form-control"><%= listing.description %>"</textarea>
+            <textarea name="listing[description]" class="form-control" required> <%= listing.description %>"</textarea>
+            <div class="invalid-feedback">
+       Please enter a short description
+    </div>
         </div>
         <div class="mb-3">
             <label for=image" class="form-label">Image Link</label>
-            <input type="text" name="listing[image]" class="form-control" value="<%= listing.image %>">
+            <input type="text" name="listing[image]" class="form-control" value="<%= listing.image %>" required>
+            <div class="invalid-feedback">
+     Image should be valid
+    </div>
         </div>
        <div class="row">
          <div class="mb-3 col-md-4">
             <label for=price" class="form-label">Price</label>
-            <input type="number" name="listing[price]" class="form-control" value="<%= listing.price %>">  
+            <input type="number" name="listing[price]" class="form-control" value="<%= listing.price %>" required>  
+            <div class="invalid-feedback">
+      Price should be valid
+    </div>
         </div>
         <div class="mb-3 col-md-8">
             <label for=country" class="form-label">Country</label>
-            <input type="text" name="listing[country]" class="form-control"  value="<%= listing.country %>">
+            <input type="text" name="listing[country]" class="form-control"  value="<%= listing.country %>" required>
+            <div class="invalid-feedback">
+      Country should be valid
+    </div>
         </div>
        </div>
         <div class="mb-3">
             <label for="location" class="form-label">Location</label>
-            <input type="text" name="listing[location]" class="form-control" value="<%= listing.location %>">
+            <input type="text" name="listing[location]" class="form-control" value="<%= listing.location %>" required>
+            <div class="invalid-feedback">
+      Location should be valid
+    </div>
         </div>
-        <button class="btn btn-dark add-btn mb-3">Done</button> 
+        <button class="btn btn-dark add-btn ms-0">Done</button> 
     </form>
     </div>
     </div>
