--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -15,7 +15,7 @@
       <div class="card-body">
         <p class="card-text">
           <b><%= listing.title %></b> <br />
-          &#8377;<%= listing.price.toLocaleString("en-IN") %> / night
+          ₹ <%= listing.price.toLocaleString('en-In') %>/ night
         </p>
       </div>
     </div>
